manifests/dev/prowlarr/Deployment-prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/version: latest
  name: prowlarr
  namespace: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: prowlarr
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: prowlarr
        app.kubernetes.io/name: prowlarr
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
            - name: PROWLARR__POSTGRES__HOST
              value: postgresql.postgresql
            - name: PROWLARR__POSTGRES__PORT
              value: "5432"
            - name: PROWLARR__POSTGRES__MAINDB
              value: prowlarr-main
            - name: PROWLARR__POSTGRES__LOGDB
              value: prowlarr-log
            - name: PROWLARR__POSTGRES__USER
              value: prowlarr
            - name: PROWLARR__POSTGRES__PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: prowlarr-database-password
          image: linuxserver/prowlarr:2.5.2.5491-ls156
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 9696
            initialDelaySeconds: 90
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: prowlarr
          ports:
            - containerPort: 9696
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 9696
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /config
              name: config
      initContainers: []
      nodeSelector:
        kubernetes.io/hostname: edgenix
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-prowlarr-config
        - name: prowlarr-database-password
          secret:
            secretName: prowlarr-database-password
