manifests/dev/prowlarr/Service-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  ports:
    - name: http
      port: 9696
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: prowlarr
    app.kubernetes.io/name: prowlarr
  type: ClusterIP
