manifests/dev/prowlarr/Ingress-prowlarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: prowlarr
  namespace: prowlarr
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - prowlarr.home.kronkltd.net
      secretName: prowlarr.home.kronkltd.net-tls
